# cathedralsubnet

./: .dockerignore  .gitignore  .railwayignore  CLAUDE.md  Cargo.toml  Dockerfile  MORNING_STATUS.md  README.md  RELEASES.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cathedral-runtime-image.yml  codeql.yml  snyk.yml
.venv-byo/: pyvenv.cfg
.venv-fix/: pyvenv.cfg
.venv-int/: pyvenv.cfg
.venv-prefix/: pyvenv.cfg
config/: mainnet.toml  miner.toml  testnet.toml
crates/cathedral-cards/: Cargo.toml
crates/cathedral-cards/src/: lib.rs  preflight.rs  registry.rs  score.rs
crates/cathedral-chain/: Cargo.toml
crates/cathedral-chain/src/: lib.rs  metagraph.rs  mock.rs  weights.rs
crates/cathedral-cli/: Cargo.toml
crates/cathedral-cli/src/: main.rs
crates/cathedral-evidence/: Cargo.toml
crates/cathedral-evidence/src/: fetch.rs  filter.rs  lib.rs  verify.rs
crates/cathedral-miner/: Cargo.toml
crates/cathedral-miner/src/: config.rs  lib.rs  main.rs  submit.rs
crates/cathedral-types/: Cargo.toml
crates/cathedral-types/src/: card.rs  claim.rs  evidence.rs  hotkey.rs  lib.rs
crates/cathedral-validator/: Cargo.toml
crates/cathedral-validator/src/: auth.rs  config.rs  health.rs  http.rs  lib.rs  loops.rs  main.rs  state.rs
docker/cathedral-runtime/: Dockerfile  requirements.txt  server.py
docs/: ARCHITECTURE.md  ATTESTATION_CONTRACT.md  BITTENSOR.md  HERMES.md  VALIDATOR.md  gpu-kernel-optimization-job.md
docs/miner/: QUICKSTART.md  QUICKSTART_LEGACY_V1_CLAIM.md
docs/ops/: branch-cleanup-2026-05-15.md  branch-prune-audit-2026-05-15.md
docs/protocol/: CLAIM.md  SCORING.md
docs/runbooks/: HANDOFF.md
docs/v2/: ARCHITECTURE.md  ASSUMPTIONS.md  README.md  ROADMAP.md
docs/v3/: ARCHITECTURE.md  ASSUMPTIONS.md  README.md  ROADMAP.md
docs/v3/corpus/: PRIVATE_CORPUS_STORAGE.md
docs/validator/: RUNBOOK.md  UPGRADING_TO_V1_1_0.md
etc/cathedral/: allowed_signers
scripts/: cathedral-validator.service  dev.sh  ecosystem.config.cjs  install.sh  pack_baseline_bundle.sh  provision_miner.sh  provision_validator.sh  smoke.sh  smoke_launcher.py  smoke_v2.sh
scripts/miner/: install_cathedral_probe_host.sh  submit_agent_bundle.py  submit_agent_bundle.sh  verify_cathedral_probe.sh
scripts/stub_polaris/: server.py
src/cathedral/: __init__.py  config.py  logging.py  types.py  v1_types.py
src/cathedral/attestation/: __init__.py  approved_runtimes.py  errors.py  nitro.py  sev_snp.py  tdx.py  verifier.py
src/cathedral/auth/: __init__.py  hotkey_signature.py
src/cathedral/cards/: __init__.py  preflight.py  registry.py  score.py
src/cathedral/chain/: __init__.py  anchor.py  client.py  mock.py  weights.py
src/cathedral/cli/: __init__.py  miner.py  ops.py  validator.py
src/cathedral/eval/: __init__.py  bundle_publisher.py  merkle.py  orchestrator.py  polaris_deploy_runner.py  polaris_runner.py  probe_runner.py  scoring.py  scoring_pipeline.py  ssh_hermes_runner.py  ssh_probe_runner.py  task_generator.py  v2_payload.py
src/cathedral/evidence/: __init__.py  collector.py  fetch.py  filter.py  verify.py
src/cathedral/miner/: __init__.py  submit.py
src/cathedral/publisher/: __init__.py  app.py  auth_signature.py  cli.py  merkle.py  reads.py  repository.py  similarity.py  skill_md.py  submit.py
src/cathedral/storage/: __init__.py  bundle_extractor.py  crypto.py  hippius.py  hippius_client.py
src/cathedral/v2/: __init__.py  runtime.py  types.py
src/cathedral/v3/: __init__.py  claim_extraction.py  dispatch.py  prompts.py  publisher.py  runtime.py  sign.py  types.py
src/cathedral/v4/: __init__.py  cathedral_engine.py  schemas.py  sign.py  verify.py
src/cathedral/validator/: __init__.py  app.py  auth.py  cards.py  config_runtime.py  db.py  health.py  pull_loop.py  queue.py  stall.py  weight_loop.py  worker.py
tests/: claim_roundtrip.rs  conftest.py  test_chain.py  test_claim.py  test_evidence_collector.py  test_filter.py  test_inline_card_payload.py  test_polaris_contract.py  test_preflight.py  test_probe_mode.py  test_probe_runner.py  test_pull_loop_backfill.py  test_scorer.py  test_validator_config_resolution.py  test_validator_http.py  test_validator_pull_loop_wiring.py  test_weight_loop.py  test_weights.py
tests/fixtures/: polaris_contract_golden_vectors.json  v1_golden_vectors.json
tests/smoke/: conftest.py  docker-compose.smoke.yml  test_v107_v110_back_compat.py
tests/v1/: ADVERSARIAL_REPORT.md  ADVERSARIAL_REPORT_PASS2.md  conftest.py  nitro_fixtures.py  test_attestation_modes.py  test_bundle_card_runner.py  test_bundle_publisher.py  test_byo_compute_flow.py  test_cadence_scheduler.py  test_discovery_surface.py  test_eval_orchestrator.py  test_golden_vectors_v1.py  test_hotkey_signature.py  test_launch_collapse_eu_ai_act_only.py  test_merkle_anchor.py  test_polaris_deploy_runner.py  test_polaris_runtime_orchestrator_wiring.py  test_polaris_runtime_runner.py  test_publisher_app.py  test_publisher_reads.py  test_publisher_similarity.py  test_publisher_submit.py  test_scoring_first_mover.py  test_ssh_hermes_runner.py  test_ssh_probe_runner.py  test_storage_hippius.py  test_v2_signed_payload.py  test_validator_pull_loop.py
tests/v1/exploits/: canonical_json_default_str.py  card_copy_attack.py  queue_dos.py  (+19 more)
tests/v2/: test_code_patch_subprocess.py  test_determinism.py  test_e2e.py  test_tamper.py
tests/v3/: test_bug_isolation_dispatch.py  test_bug_isolation_scorer.py  test_bug_repro_sandbox_gate.py  test_bundle.py  test_claim_extraction.py  test_code_patch_subprocess.py  test_corpus_loader.py  test_corpus_sampler.py  test_determinism.py  test_dpo_safety_gate.py  test_e2e.py  test_export_firewall.py  test_no_public_real_corpus.py  test_publisher_bug_isolation.py  test_sandbox.py  test_short_oracle_scrub.py  test_sign_helper.py  test_sign_payload_v3.py  test_tamper.py
tests/v4/: conftest.py  test_arena.py  test_benchmark.py  test_bundle_split.py  test_engine.py  test_oracle.py  test_oracle_jail.py  test_schemas.py  test_sign_verify.py  test_synthetic_rows.py  test_ts_prisma_vault.py  test_validator_no_execution.py
(+86 files in other folders)
