[project]
name = "cathedral-subnet"
version = "0.1.0"
description = "Cathedral subnet validator and miner"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "cathedralai" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "cryptography>=43",
    "blake3>=0.4",
    "structlog>=24.4",
    "typer>=0.13",
    "tomli>=2.0; python_version<'3.11'",
    "bittensor>=8.0",
    "python-multipart>=0.0.9,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
    "cbor2>=5.6",
    "asyncssh>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-aiofiles",
    "respx>=0.21",
]

[project.scripts]
cathedral = "cathedral.cli.ops:app"
cathedral-validator = "cathedral.cli.validator:app"
cathedral-miner = "cathedral.cli.miner:app"
cathedral-publisher = "cathedral.publisher.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cathedral"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src/cathedral"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "ASYNC",
    "S",
    "RUF",
]
ignore = ["S101", "S104", "S105", "UP036", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B017"]
# FastAPI dependency injection requires `= File(...)` / `= Depends(...)` defaults.
"src/cathedral/publisher/submit.py" = ["B008"]
"src/cathedral/publisher/reads.py" = ["B008"]
# `SimilarityRejection` is named for the rejection event, not an Error pattern.
"src/cathedral/publisher/similarity.py" = ["N818"]
# SQL ORDER BY clause is built from a whitelisted dispatch — not user input.
"src/cathedral/publisher/repository.py" = ["S608"]
# skill.md is a long markdown document rendered to agents over HTTP. Line
# length and en-dash literals are intentional and meaningful for readers;
# the file's only Python is a constant f-string holding the doc.
"src/cathedral/publisher/skill_md.py" = ["E501", "RUF001", "S608"]
