[package]
name = "cathedral-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cathedral-types = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
