[package]
name = "cathedral-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cathedral-validator"
path = "src/main.rs"

[dependencies]
cathedral-types = { workspace = true }
cathedral-chain = { workspace = true }
cathedral-evidence = { workspace = true }
cathedral-cards = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
figment = { workspace = true }
clap = { workspace = true }
